# desarollo

./: .dockerignore  .env.example  .env.stack.example  .gitignore  .jumpserver-installer-branch  BACKEND_INTEGRATION_PLAN.md  BRANDING-GUIDE.md  CADDY_LOAD_BALANCER_CONFIG.md  CHANGELOG.md  CLOUDSPACE_DEPLOYMENT.md  CLOUD_PROVIDERS_CONFIG.md  COMPARACION-BRANDING.md  Caddyfile  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_STATUS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_BUILDER.md  JUMPSERVER_BRANCHES.md  JUMPSERVER_BRANCH_STATUS.md  JUMPSERVER_COMPLETE_SETUP.md  JUMPSERVER_INSTALLER_BRANCH.md  PROJECT_SUMMARY.md  PROYECTO-COMPLETADO.md  QUICK-BUILD-GUIDE.md  QUICKSTART.md  README-BRANDING.md  README-JUMPSERVER-CLIENT-TESTING.md  README-JUMPSERVER-INSTALLER.md  README-TASK-COMPLETE.md  README-v3.0.7.md  README.md  RESUMEN-CAMBIOS.md  SECURITY-SUMMARY.md  VERSION-COMPARISON.md  auth  auth.1  create_placeholder_logos.py  deploy.sh  docker-compose.stack.yml  (+9 more)
jumpserver-client/src-tauri/: Cargo.toml  tauri.conf.json
jumpserver-client/src-tauri/capabilities/: main.json
jumpserver-client/src-tauri/icons/: icon.icns
jumpserver-client/src-tauri/src/: lib.rs  main.rs  models.rs  utils.rs
jumpserver-client/src-tauri/src/commands/: get_asset_detail.rs  get_assets.rs  get_config.rs  get_setting.rs  get_token.rs  list_system_fonts.rs  logout.rs  mod.rs  pull_up.rs  rename_asset.rs  requests.rs  set_favorite.rs  unfavorite.rs  update_config.rs  url_watcher.rs  window_controls.rs
jumpserver-client/src-tauri/src/service/: asset.rs  config.rs  detail.rs  favorite.rs  mod.rs  (+4 more)
(+370 files in other folders)
